fix: Fix interaction buttons not aligning vertically
When the like counter had more than 1 digit the buttons would shift left
and make it so they weren't aligned with the other posts' buttons
anymore. This fix makes it so that the buttons have a container with a
minimal width, which is 5 characters wide

--- a/src/Components/Post/post.css
+++ b/src/Components/Post/post.css
@@ -117,49 +117,50 @@
     grid-area: interactions;
     display: grid;
     grid-template-columns: auto auto auto;
-    align-items: center;
-    justify-items: flex-start;
     margin-top: 0.4em;
-    button {
-      padding: 4px;
-      background-color: inherit;
-      border: none;
-      border-radius: 4px;
-      color: inherit;
-      transition: background-color 0.2s ease;
-      display: flex;
-      align-items: center;
-      justify-content: left;
-      .counter {
-        font-size: 0.85em;
-        margin-left: 0.5em;
-      }
-      &.likedPost svg {
-        color: #f38ba8;
-      }
-      .kindaLiked {
-        font-weight: 600;
-      }
-      .veryLiked {
-        font-weight: 700;
-      }
-      .likedALot {
-        font-weight: 800;
-      }
-      &.likeButton:hover {
-        color: rgb(243, 139, 168);
-        background-color: rgba(243, 139, 168, 0.1);
-      }
-      &.commentButton:hover {
-        color: rgb(137, 180, 250);
-        background-color: rgba(137, 180, 250, 0.1);
-      }
-      &.repostButton:hover {
-        color: #a6e3a1;
-        background-color: rgba(166, 227, 161, 0.1);
-      }
-      &:hover {
-        cursor: pointer;
+    .interactionContainer {
+      min-width: 4em;
+      button {
+        padding: 4px;
+        background-color: inherit;
+        border: none;
+        border-radius: 4px;
+        color: inherit;
+        transition: background-color 0.2s ease;
+        display: flex;
+        align-items: center;
+        justify-items: left;
+        .counter {
+          font-size: 0.85em;
+          margin-left: 0.5em;
+        }
+        &.likedPost svg {
+          color: #f38ba8;
+        }
+        .kindaLiked {
+          font-weight: 600;
+        }
+        .veryLiked {
+          font-weight: 700;
+        }
+        .likedALot {
+          font-weight: 800;
+        }
+        &.likeButton:hover {
+          color: rgb(243, 139, 168);
+          background-color: rgba(243, 139, 168, 0.1);
+        }
+        &.commentButton:hover {
+          color: rgb(137, 180, 250);
+          background-color: rgba(137, 180, 250, 0.1);
+        }
+        &.repostButton:hover {
+          color: #a6e3a1;
+          background-color: rgba(166, 227, 161, 0.1);
+        }
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
